WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
275237
REGRESSION(
279787@main
): [Win, Linux] Debug assertions shouldn't print the stack trace twice
https://bugs.webkit.org/show_bug.cgi?id=275237
Summary
REGRESSION(279787@main): [Win, Linux] Debug assertions shouldn't print the st...
Fujii Hironori
Reported
2024-06-06 17:49:14 PDT
Created
attachment 471613
[details]
navigate-when-restoring-cached-page-stderr.txt After
279787@main
, Windows port Debug builds print the stack trace twice. I attached navigate-when-restoring-cached-page-stderr.txt of the following test run.
> python .\Tools\Scripts\run-webkit-tests --wincairo --debug --no-retry http/tests/security/navigate-when-restoring-cached-page.html
Attachments
navigate-when-restoring-cached-page-stderr.txt
(7.14 KB, text/plain)
2024-06-06 17:49 PDT
,
Fujii Hironori
no flags
Details
View All
Add attachment
proposed patch, testcase, etc.
Fujii Hironori
Comment 1
2024-06-06 18:03:57 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/29605
EWS
Comment 2
2024-06-06 18:46:07 PDT
Committed
279789@main
(867d318d009c): <
https://commits.webkit.org/279789@main
> Reviewed commits have been landed. Closing PR #29605 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2024-06-06 18:47:14 PDT
<
rdar://problem/129375268
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug