REGRESSION(279787@main): [Win, Linux] Debug assertions shouldn't print the stack trace twice https://bugs.webkit.org/show_bug.cgi?id=275237

Reviewed by Keith Miller.

After https://commits.webkit.org/279787@main added BACKTRACE() to
assertions, the stack trace was printed twice for Windows and Linux.
WTFCrash prints the stack trace for Windows and Linux, but for Darwin
and PlayStation.

* Source/WTF/wtf/Assertions.cpp:
(WTFCrash): Don't call WTFPrintBacktrace for Windows and Linux.

Canonical link: https://commits.webkit.org/279789@main